# assistant

./: .gitignore  Dockerfile  Pipfile  README.md  c_111.txt  c_1280742969_None.txt  c_887549275_UlaynaBozhko.txt  classes.py  classes_u.py  echobot.py  functions.py  list_methods_of_classes.txt  main.py  requirements.txt  setup.cfg
kos/lesson6/: hw6.py
kos/lesson7/clean_folder/: README.md  setup.py
kos/lesson7/clean_folder/clean_folder/: clean.py
kos/lesson_12/: .gitignore  hw12_classes.py  hw12_main.py
src/assistant/: __init__.py  classes.py  functions.py  main.py
src/assistant.egg-info/: PKG-INFO  SOURCES.txt
ulka/lesson12/: classes_hw12.py  main_hw12.py
ulka/lesson6/: hw6.py  hw6_copy.py
ulka/lesson6/auto_homework/: a.txt  b.txt  hw6_2.py  hw6_2.txt  hw6_3.py  hw6_4.py
ulka/lesson7/clean_folder/: setup.py
ulka/lesson7/clean_folder/clean.egg-info/: PKG-INFO  SOURCES.txt
ulka/lesson7/clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt
yar/clean_folder/: setup.py
yar/clean_folder/clean_folder.egg-info/: PKG-INFO
yar/module_12/: hw_12_cls.py  hw_12_main.py
yar/module_6/: probe6.py
