[metadata]
name = assistant
version = 0.0.7
author = UlkaBo KonstZiv Adashian Romanskyy
author_email = ul.bozhko@gmail.com
description = Your personal pretty looking assistant.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/personality-assistant/assistant
project_urls =
    Bug Tracker = https://github.com/personality-assistant/assistant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    assistant = assistant.main:main
